[tool.poetry]
name = "pricing-models"
version = "0.1.0"
description = ""
authors = ["Orpheus <orpheus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numba = "^0.60.0"
numpy = "2.0.2"
matplotlib = "^3.10.0"
arch = "^7.2.0"
pandas = "2.2.3"
scipy = "1.14.1"
statsmodels = "0.14.4"
yfinance = "^0.2.50"
pandas-datareader = "^0.10.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
